--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "commander": "^11.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/node": "20.8.7"
   }
 }
